Initial commit of MLClassifierFX project